re #33 - logo and menu now also visible on IE8 and fixed bug on IE8 with trusted images

--- a/_scss/_molecules/_navbar.scss
+++ b/_scss/_molecules/_navbar.scss
@@ -38,6 +38,9 @@
 
 .navbar__item {
   line-height: 24px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 
   @include respond-min(320px) {
     float: left;
