--- a/_scss/_molecules/_thumbnails.scss
+++ b/_scss/_molecules/_thumbnails.scss
@@ -7,6 +7,7 @@
 
   li {
     margin-bottom: $spacing-xs;
+    max-width: 100%;
   }
 
   .thumbnail {
@@ -17,6 +18,7 @@
     border: 1px solid #fff;
     border-radius: 6px;
     transition: all .2s ease-in-out;
+    max-width: 100%;
 
     &:hover {
       border: 1px solid $brand-primary--light;
