--- a/_scss/_organisms/_header.scss
+++ b/_scss/_organisms/_header.scss
@@ -23,8 +23,8 @@
     height: 40px;
 
     a {
-      display: inline-block;
-      width: auto;
+      display: block;
+      width: 86px;
       height: 40px;
 
       img {
