--- a/_scss/_organisms/_trusted.scss
+++ b/_scss/_organisms/_trusted.scss
@@ -17,7 +17,7 @@
     max-width: 200px;
 
     @include respond-min($breakpoint-charlie) {
-      max-width: none;
+      max-width: 100%;
     }
   }
 
