--- a/_scss/_utilities/_responsivemenu.scss
+++ b/_scss/_utilities/_responsivemenu.scss
@@ -50,11 +50,21 @@ $screenwidth: 600px !default;
   z-index: 99;
 }
 
-/* Extend the accessible hide class to the closed class class */
+/* Extend the accessible hide class to the closed class  */
 /* Only when JS is enabled since we add the closed class in the markup */
-.js-enabled {
-  .closed {
-    @extend %accessible-hide;
+/* and only when browsers are capable of having responsoive menus */
+@media screen and (min-width: 0) {
+  .js-enabled {
+    .closed {
+      position: absolute !important;
+      overflow: hidden !important;
+      clip: rect(0 0 0 0) !important;
+      height: 1px !important;
+      width: 1px !important;
+      margin: -1px !important;
+      padding: 0 !important;
+      border: 0 !important;
+    }
   }
 }
 
